--- a/aivoxplay/pyproject.toml
+++ b/aivoxplay/pyproject.toml
@@ -5,8 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "numpy<2",
     "runpod>=1.7.13",
+    "torch==2.2.2",
+    "numpy==1.26.4",
+    "soundfile",
+    "transformers"
 ]
 
 [build-system]
