--- a/aivoxplay/pyproject.toml
+++ b/aivoxplay/pyproject.toml
@@ -1,18 +1,115 @@
 [project]
 name = "aivoxplay"
 version = "0.1.0"
-description = "Add your description here"
+description = "A simple python package to make STT, TTS, and STS easier to experiement."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "runpod>=1.7.13",
+    "runpod==1.7.13",
     "torch==2.2.2",
     "numpy==1.26.4",
-    "soundfile",
-    "transformers",
-    "openai>=1.97.1",
-    "snac>=1.2.1",
-    "sounddevice>=0.5.2",
+    "soundfile==0.13.1",
+    "transformers==4.53.3",
+    "openai==1.97.1",
+    "snac==1.2.1",
+    "sounddevice==0.5.2",
+    "aiodns==3.5.0",
+    "aiohappyeyeballs==2.6.1",
+    "aiohttp==3.12.14",
+    "aiohttp-retry==2.9.1",
+    "aiosignal==1.4.0",
+    "annotated-types==0.7.0",
+    "anyio==4.9.0",
+    "attrs==25.3.0",
+    "backoff==2.2.1",
+    "bcrypt==4.3.0",
+    "boto3==1.39.10",
+    "botocore==1.39.10",
+    "brotli==1.1.0",
+    "certifi==2025.7.14",
+    "cffi==1.17.1",
+    "charset-normalizer==3.4.2",
+    "click==8.2.1",
+    "colorama==0.4.6",
+    "cryptography==45.0.5",
+    "distro==1.9.0",
+    "dnspython==2.7.0",
+    "einops==0.8.1",
+    "email-validator==2.2.0",
+    "fastapi==0.116.1",
+    "fastapi-cli==0.0.8",
+    "fastapi-cloud-cli==0.1.4",
+    "filelock==3.18.0",
+    "frozenlist==1.7.0",
+    "fsspec==2025.7.0",
+    "h11==0.16.0",
+    "hf-xet==1.1.5",
+    "httpcore==1.0.9",
+    "httptools==0.6.4",
+    "httpx==0.28.1",
+    "huggingface-hub==0.33.4",
+    "idna==3.10",
+    "inquirerpy==0.3.4",
+    "itsdangerous==2.2.0",
+    "jinja2==3.1.6",
+    "jiter==0.10.0",
+    "jmespath==1.0.1",
+    "markdown-it-py==3.0.0",
+    "markupsafe==3.0.2",
+    "mdurl==0.1.2",
+    "mpmath==1.3.0",
+    "multidict==6.6.3",
+    "networkx==3.5",
+    "orjson==3.11.0",
+    "packaging==25.0",
+    "paramiko==3.5.1",
+    "pfzy==0.3.4",
+    "prettytable==3.16.0",
+    "prompt-toolkit==3.0.51",
+    "propcache==0.3.2",
+    "py-cpuinfo==9.0.0",
+    "pycares==4.9.0",
+    "pycparser==2.22",
+    "pydantic==2.11.7",
+    "pydantic-core==2.33.2",
+    "pydantic-extra-types==2.10.5",
+    "pydantic-settings==2.10.1",
+    "pygments==2.19.2",
+    "pynacl==1.5.0",
+    "python-dateutil==2.9.0.post0",
+    "python-dotenv==1.1.1",
+    "python-multipart==0.0.20",
+    "pyyaml==6.0.2",
+    "regex==2024.11.6",
+    "requests==2.32.4",
+    "rich==14.0.0",
+    "rich-toolkit==0.14.8",
+    "rignore==0.6.4",
+    "s3transfer==0.13.1",
+    "safetensors==0.5.3",
+    "sentry-sdk==2.33.1",
+    "shellingham==1.5.4",
+    "six==1.17.0",
+    "sniffio==1.3.1",
+    "starlette==0.47.2",
+    "sympy==1.14.0",
+    "tokenizers==0.21.2",
+    "tomli==2.2.1",
+    "tomlkit==0.13.3",
+    "tqdm==4.67.1",
+    "tqdm-loggable==0.2",
+    "typer==0.16.0",
+    "typing-extensions==4.14.1",
+    "typing-inspection==0.4.1",
+    "ujson==5.10.0",
+    "urllib3==2.5.0",
+    "uvicorn==0.35.0",
+    "uvloop==0.21.0",
+    "watchdog==6.0.0",
+    "watchfiles==1.1.0",
+    "wcwidth==0.2.13",
+    "websockets==12.0",
+    "yarl==1.20.1",
 ]
 
 [build-system]
