--- a/aivoxplay/pyproject.toml
+++ b/aivoxplay/pyproject.toml
@@ -110,6 +110,8 @@ dependencies = [
     "wcwidth==0.2.13",
     "websockets==12.0",
     "yarl==1.20.1",
+    "langgraph>=0.6.3",
+    "langchain-openai>=0.3.28",
 ]
 
 [build-system]
